# ShadowControl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROS2_SETUP.md  build_ros2.sh  package.xml  requirements.txt  run.sh  setup.py
config/: robot.yaml
demo/: poseestimation.py  teleoperate.py
docs/: index.html
install/: local_setup.sh  setup.sh
launch/: pose_estimation.launch.py  system.launch.py
log/: latest_build
msg/: JointAngles.msg  Landmark3D.msg  PoseData.msg
nodes/: image_viewer.py  pose_publisher.py  pose_subscriber.py  robot_controller.py
scripts/: configure_baudrate.py  configure_servo.py  diagnose_mediapipe.py  diagnose_servos.py  oscillate_test.py  servo_calibration.json  servo_calibration_straight.json  servo_control.py  test_servo.py  test_servos.py  test_vision.py  webcam.py
src/: __init__.py  servo_controller.py
src/control/: __init__.py
src/vision/: __init__.py
